tools/crates/vendor/zerocopy/tests/ui-stable/transmute-mut-dst-unsized.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
 --> tests/ui-stable/transmute-mut-dst-unsized.rs:17:32
  |
 17 | const DST_UNSIZED: &mut [u8] = transmute_mut!(&mut [0u8; 1]);
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> src/util/macro_util.rs
    |
    | impl<'a, Src, Dst> Wrap<&'a mut Src, &'a mut Dst> {
    |               ^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
...
    |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
